tests/agl/rejections/type/ask_surplus_positional.agl
let x: text = ask("prompt1", "prompt2")
x
